--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -3,6 +3,7 @@
       <li routerLinkActive="active"><a routerLink="./home">Home</a></li>
       <li routerLinkActive="active" class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Strategic plan<span class="caret"></span></a>
         <ul class="dropdown-menu">
+          <li><a routerLink="./strategic-plan">Strategic Plan</a></li>
           <li><a routerLink="./strategic-goal">Strategic goals</a></li>
           <li><a routerLink="./initiatives">Proposed Initiatives</a></li>
           <li><a routerLink="./activities" >Proposed Activities</a></li>
